category overflow fixed

--- a/static/main.css
+++ b/static/main.css
@@ -134,7 +134,7 @@ input[type="submit"]:hover{
 /* Arrow Button Styles */
 .arrows {
     position: absolute;
-    left: 85%;
+    left: -3cm;
     top: 50%;
     /*border: 5px solid red;*/
 }
@@ -150,7 +150,7 @@ input[type="submit"]:hover{
 }
 
 .arr:hover {
-    box-shadow: 0px 0px 20px 20px rgba(255, 255, 255, 0.331);
+    box-shadow: 0px 0px 20px 20px red;
 }
 
 .arr div {
